[gd_scene load_steps=4 format=3 uid="uid://1xn0nmlayh7m"]

[ext_resource type="Script" uid="uid://cxxdo0nf3h4g3" path="res://Cenas/intro.gd" id="1_cgwi2"]
[ext_resource type="FontFile" uid="uid://2jb60851ilq6" path="res://font/antiquity-print.ttf" id="1_oq8kq"]
[ext_resource type="Texture2D" uid="uid://dalm8v4off5gg" path="res://Sprites/background.png" id="2_rubek"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_cgwi2")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_rubek")
expand_mode = 2

[node name="DialogLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 26.0
offset_right = -20.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9067659, 0.31210506, 0, 1)
theme_override_fonts/font = ExtResource("1_oq8kq")
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="DialogTimer" to="." method="_on_dialog_timer_timeout"]
